# SesameSDK_PICO_with_DemoApp

./: README.md  README_EN.md  README_JP.md
pico_port/: .gitignore  CMakeLists.txt  PICO2_SUPPORT.md  PORTING_NOTES.md  README.md  README_JP.md  build.sh  verify.sh
pico_port/src/: ble_central.c  ble_central.h  main.c
pico_port/src/sesame/: ssm.c  ssm_cmd.c
pico_port/src/utils/: c_ccm.c
